fix: show ConnectionErrorBadge only on actual connection issues
- Display ConnectionErrorBadge in header only when there is no internet, lost connection to the node, or the node is out of sync with the chain/grap

--- a/locales/en.json
+++ b/locales/en.json
@@ -18,6 +18,8 @@
     "general.continueQuestion": "Continue?",
     "general.readOnlyWallet": "Read-only wallet",
     "general.custodialWallet": "Custodial wallet",
+    "general.connectionLost": "Connection lost",
+    "general.nodeNotSynced": "Node not synced",
     "general.show": "Show",
     "general.close": "Close",
     "general.hide": "Hide",
