feat: Cashu Tools: delete all data

--- a/locales/en.json
+++ b/locales/en.json
@@ -729,6 +729,10 @@
     "views.Tools.cashu": "Cashu Tools",
     "views.Tools.cashu.bumpWalletCounters": "Bump wallet counters",
     "views.Tools.cashu.bumpWalletCounters.subtitle": "Helpful if your wallet counters get out of sync and you encounter 'Outputs have already been signed before' errors.",
+    "views.Tools.cashu.deleteData": "Delete all Cashu data",
+    "views.Tools.cashu.deleteData.confirmTitle": "Are you sure you want to delete all your Cashu data?",
+    "views.Tools.cashu.deleteData.confirmMessage": "Funds can still be restored by re-adding your mints, but transaction history will be lost.",
+    "stores.CashuStore.dataDeletedMessage": "Your Cashu data has been deleted.",
     "views.Tools.developerTools.title": "Developer Tools",
     "views.Tools.developerTools.noItemsExist": "No items exist",
     "views.Settings.title": "Settings",
