implemented bolt12 withdrawal request

--- a/locales/en.json
+++ b/locales/en.json
@@ -782,6 +782,10 @@
     "views.Tools.nodeConfigExportImport.exportError": "Export failed",
     "views.Tools.nodeConfigExportImport.importSuccess": "Import successful",
     "views.Tools.nodeConfigExportImport.importError": "Import failed",
+    "views.Tools.withdrawal.title": "Withdrawal Request",
+    "views.Tools.withdrawal.descriptionPlaceholder": "Gift to Zeus",
+    "views.Tools.withdrawal.createWithdrawalRequest": "Create withdrawal request",
+    "views.withdrawal.errorCreate": "Error creating withdrawal request",
     "views.Settings.title": "Settings",
     "views.Settings.enabled": "Enabled",
     "views.Settings.disabled": "Disabled",
