--- a/locales/en.json
+++ b/locales/en.json
@@ -491,6 +491,10 @@
     "views.Channel.lease.purchaseLease": "Purchase channel lease",
     "views.Channel.lease.extendLease": "Extend channel lease",
     "views.UTXOs.CoinControl.noUTXOs": "No UTXOs available",
+    "views.UTXOs.savePlaceholder": "Add a label for this UTXO",
+    "views.UTXOs.AddLabel": "Add a Label",
+    "views.UTXOs.UpdateLabel": "Update Label",
+    "views.UTXOs.writeLabel": "Write your label here",
     "views.EditFee.mainText": "Edit network fee",
     "views.EditFee.fastestFee": "Fastest fee",
     "views.EditFee.halfHourFee": "Half hour fee",
@@ -695,7 +699,7 @@
     "views.Send.keysendNotSupported": "does not support sending keysend payments at the moment.",
     "views.Send.lookup": "Look Up Payment Request",
     "views.Send.noOnchainBalance": "No on-chain balance available. Close a channel or receive an on-chain transaction first.",
-    "views.Send.noLightningBalance": "No lightning balance available. Open a channel or receive a lightning payment first.",
+    "views.Send.noLightningBalance": "No lightning balSendingLightning.UpdateNoteance available. Open a channel or receive a lightning payment first.",
     "views.Send.zaplockerWarning": "This is a Zaplocker invoices that will hold payment up to 24 hours. Open ZEUS regularly after payment to help mitigate the risk of a force closed channel. Proceed at your own risk.",
     "views.Send.addOutput": "Add output",
     "views.Send.removeOutput": "Remove output",
