feat : add ability to lock a token to a pubkey + set duration

--- a/locales/en.json
+++ b/locales/en.json
@@ -997,6 +997,7 @@
     "views.Settings.AddContact.addExtraField": "Add extra field",
     "views.Settings.AddContact.saveContact": "Save Contact",
     "views.Settings.AddContact.deleteContact": "Delete Contact",
+    "views.Settings.AddContact.cashuPubkey": "Cashu pubkey",
     "views.Settings.Contacts.multipleAddresses": "multiple addresses",
     "views.Settings.Contacts.searchBar1": "Nostr npub, NIP-05, LN address, Onchain address",
     "views.Settings.Contacts.searchBar2": "Search",
