feat: listpeers and disconnect peers

--- a/locales/en.json
+++ b/locales/en.json
@@ -350,6 +350,12 @@
     "views.OpenChannel.fundMax": "Use all possible funds",
     "views.OpenChannel.openAdditionalChannel": "Open additional channel",
     "views.OpenChannel.removeAdditionalChannel": "Remove additional channel",
+    "views.OpenChannel.noPeers": "No peers found",
+    "views.OpenChannel.satsRecv": "Sats received",
+    "views.OpenChannel.pingTime": "Ping Time",
+    "views.OpenChannel.satsSent": "Sats sent",
+    "views.OpenChannel.disconnectPeerModalTitle": "Disconnect peer",
+    "views.OpenChannel.disconnectPeerModalText": "Are you sure you want to disconnect from this peer?",
     "views.Wallet.BalancePane.sync.title": "Finishing sync",
     "views.Wallet.BalancePane.sync.text": "Hang on tight! You will be ready to use Zeus soon.",
     "views.Wallet.waitForSync": "Your node must be fully synced before you can send or receive payments. Please wait.",
@@ -601,6 +607,9 @@
     "views.OpenChannel.private": "Private",
     "views.OpenChannel.closeAddress": "Close address (Optional)",
     "views.OpenChannel.closeAddressExplainer": "An optional address where funds will be sent during a cooperative close. Can only be set when opening the channel and only if the peer supports it. If set, the channel can only be closed to this address.",
+    "views.OpenChannel.managePeers": "Manage Peers",
+    "views.OpenChannel.connected": "Connected",
+    "views.OpenChannel.numChannels": "Number of channels",
     "views.Payment.title": "Payment",
     "views.Payment.inTransitPayment": "In Transit Payment",
     "views.Payment.failedPayment": "Failed Payment",
