--- a/locales/en.json
+++ b/locales/en.json
@@ -1531,9 +1531,15 @@
     "views.Swaps.infoText": "Use cooperative, only if the selected service is operating",
     "views.Swaps.enterRefundAddress": "Enter the onchain address to receive refund",
     "views.Swaps.initiateRefund": "Initiate Refund",
+    "views.Swaps.networkFee": "Network fee",
+    "views.Swaps.serviceFee": "Service fee",
+    "views.Swaps.missingAmount": "Please enter an amount",
+    "views.Swaps.SwapsPane.noSwaps": "No swaps have been made yet",
+    "views.Swaps.SwapsPane.failedToLoad": "Failed to load swaps",
     "views.SwapDetails.title": "Swap Details",
     "views.SwapDetails.acceptZerpConf": "Accept Zero Conf",
     "views.SwapDetails.expectedAmount": "Expected amount",
+    "views.SwapDetails.onchainAmount": "On-chain amount",
     "views.SwapDetails.swapId": "Swap ID",
     "views.SwapDetails.timeoutBlockHeight": "Timeout Block Height",
     "views.SwapDetails.claimPublicKey": "Claim Public Key",
