feat: Swaps: tap min/max to autopopulate fields

--- a/locales/en.json
+++ b/locales/en.json
@@ -148,6 +148,8 @@
     "general.remote": "Remote",
     "general.getStarted": "Get started",
     "general.comingSoon": "Coming soon",
+    "general.min": "Min",
+    "general.max": "Max",
     "channel.status.good": "Good",
     "channel.status.stable": "Stable",
     "channel.status.unstable": "Unstable",
@@ -1529,7 +1531,7 @@
     "views.Swaps.refundSwap": "Refund swap",
     "views.Swaps.cooperative": "Cooperative refund",
     "views.Swaps.infoText": "Use cooperative, only if the selected service is operating",
-    "views.Swaps.enterRefundAddress": "Enter the onchain address to receive refund",
+    "views.Swaps.enterRefundAddress": "Enter the on-chain address to receive refund",
     "views.Swaps.initiateRefund": "Initiate Refund",
     "views.Swaps.networkFee": "Network fee",
     "views.Swaps.serviceFee": "Service fee",
