enhancement: Swap creation view

--- a/locales/en.json
+++ b/locales/en.json
@@ -372,7 +372,6 @@
     "views.Wallet.Wallet.error": "An error occurred",
     "views.Wallet.Wallet.payments": "Payments",
     "views.Wallet.Wallet.invoices": "Invoices",
-    "views.Wallet.Wallet.onchain": "On-chain",
     "views.Wallet.Wallet.channels": "Channels",
     "views.Wallet.Wallet.open": "Open",
     "views.Wallet.Wallet.pending": "Pending",
@@ -997,7 +996,7 @@
     "views.Settings.AddContact.name": "Name",
     "views.Settings.AddContact.description": "Description (max 120)",
     "views.Settings.AddContact.lnAddress": "LN address",
-    "views.Settings.AddContact.onchainAddress": "Onchain address",
+    "views.Settings.AddContact.onchainAddress": "On-chain address",
     "views.Settings.AddContact.pubkey": "Public key",
     "views.Settings.AddContact.nip05": "NIP-05",
     "views.Settings.AddContact.nostrNpub": "Nostr npub",
@@ -1006,7 +1005,7 @@
     "views.Settings.AddContact.selectField": "Select field",
     "views.Settings.AddContact.deleteContact": "Delete Contact",
     "views.Settings.Contacts.multipleAddresses": "multiple addresses",
-    "views.Settings.Contacts.searchBar1": "Nostr npub, NIP-05, LN address, Onchain address",
+    "views.Settings.Contacts.searchBar1": "Nostr npub, NIP-05, LN address, on-chain address",
     "views.Settings.Contacts.searchBar2": "Search",
     "views.Settings.Contacts.favorites": "Favorites",
     "views.Settings.Contacts.contacts": "Contacts",
@@ -1112,19 +1111,19 @@
     "views.LSPS1.orderId": "Order ID",
     "views.LSPS1.orderState": "Order state",
     "views.LSPS1.miniFeeFor0Conf": "Min fee for 0 conf",
-    "views.LSPS1.minOnchainPaymentConfirmations": "Min Onchain Payment Confirmations",
-    "views.LSPS1.onchainPayment": "Onchain payment",
+    "views.LSPS1.minOnchainPaymentConfirmations": "Min On-chain Payment Confirmations",
+    "views.LSPS1.onchainPayment": "On-chain payment",
     "views.LSPS1.orderTotal": "Order total",
     "views.LSPS1.feeTotal": "Fee total",
     "views.LSPS1.initialLSPBalance": "Initial LSP balance",
     "views.LSPS1.initialClientBalance": "Initial client balance",
     "views.LSPS1.minChannelConfirmations": "Min channel confirmations",
-    "views.LSPS1.minOnchainPaymentSize": "Min onchain payment size",
+    "views.LSPS1.minOnchainPaymentSize": "Min on-chain payment size",
     "views.LSPS1.supportZeroChannelReserve": "Supports zero channel reserve",
     "views.LSPS1.requiredChannelConfirmations": "Required channel confirmations",
     "views.LSPS1.minFundingConfirmWithingBlocks": "Min funding confirm within blocks",
     "views.LSPS1.minRequiredChannelConfirmations": "Min required channel confirmations",
-    "views.LSPS1.refundOnchainAddress": "Refund onchain address",
+    "views.LSPS1.refundOnchainAddress": "Refund on-chain address",
     "views.LSPS1.getQuote": "Get quote",
     "views.LSPS1.createOrder": "Create order",
     "views.LSPS1.makePayment": "Make payment",
@@ -1536,6 +1535,11 @@
     "views.Swaps.networkFee": "Network fee",
     "views.Swaps.serviceFee": "Service fee",
     "views.Swaps.missingAmount": "Please enter an amount",
+    "views.Swaps.generateInvoice": "Generate invoice",
+    "views.Swaps.generateInvoiceFailed": "Failed to generate invoice",
+    "views.Swaps.generateOnchainAddress": "Generate on-chain address",
+    "views.Swaps.generateOnchainAddressFailed": "Failed to generate on-chain address",
+    "views.Swaps.setFeeRate": "Set on-chain fee rate (optional)",
     "views.Swaps.SwapsPane.noSwaps": "No swaps have been made yet",
     "views.Swaps.SwapsPane.failedToLoad": "Failed to load swaps",
     "views.SwapDetails.title": "Swap Details",
