refactor: tapping on utxo label navigate to the update label view

--- a/locales/en.json
+++ b/locales/en.json
@@ -491,10 +491,10 @@
     "views.Channel.lease.purchaseLease": "Purchase channel lease",
     "views.Channel.lease.extendLease": "Extend channel lease",
     "views.UTXOs.CoinControl.noUTXOs": "No UTXOs available",
-    "views.UTXOs.savePlaceholder": "Add a label for this UTXO",
-    "views.UTXOs.AddLabel": "Add a label",
-    "views.UTXOs.UpdateLabel": "Update label",
+    "views.UTXOs.addLabel": "Add a label",
+    "views.UTXOs.updateLabel": "Update label",
     "views.UTXOs.writeLabel": "Write your label here",
+    "views.UTXOs.label": "Label",
     "views.EditFee.mainText": "Edit network fee",
     "views.EditFee.fastestFee": "Fastest fee",
     "views.EditFee.halfHourFee": "Half hour fee",
