feat(activity): show withdrawal requests in Activity view

--- a/locales/en.json
+++ b/locales/en.json
@@ -28,6 +28,7 @@
     "general.goBack": "Go Back",
     "general.lightning": "Lightning",
     "general.onchain": "On-chain",
+    "general.withdrawalReqeust": "Withdrawal request",
     "general.cashu": "Cashu",
     "general.activity": "Activity",
     "general.transaction": "Transaction",
@@ -786,6 +787,7 @@
     "views.Tools.withdrawal.descriptionPlaceholder": "Gift to Zeus",
     "views.Tools.withdrawal.createWithdrawalRequest": "Create withdrawal request",
     "views.withdrawal.errorCreate": "Error creating withdrawal request",
+    "views.withdrawal.id": "Withdrawal request ID",
     "views.Settings.title": "Settings",
     "views.Settings.enabled": "Enabled",
     "views.Settings.disabled": "Disabled",
@@ -1093,6 +1095,8 @@
     "views.Activity.noActivity": "No activity yet",
     "views.Activity.expired": "Expired",
     "views.Activity.youSent": "You sent",
+    "views.Activity.youWithdrew": "You withdrew",
+    "views.Activity.pendingWithdrawal": "Pending withdrawal",
     "views.Activity.youReceived": "You received",
     "views.Activity.youReceivedAmp": "You received (AMP)",
     "views.Activity.requestedPayment": "Requested Payment",
