--- a/locales/en.json
+++ b/locales/en.json
@@ -1546,6 +1546,7 @@
     "views.SwapDetails.bip21": "BIP21",
     "views.SwapDetails.refund": "Refund",
     "views.SwapSettings.customHost": "Enter a custom host",
+    "views.SwapSettings.failureReason": "Failure reason",
     "androidNotification.lndRunningBackground": "LND is running in the background",
     "androidNotification.shutdown": "Shutdown"
 }
