fix: preload withdrawal request amounts, description and fix navigation delay

--- a/locales/en.json
+++ b/locales/en.json
@@ -28,7 +28,7 @@
     "general.goBack": "Go Back",
     "general.lightning": "Lightning",
     "general.onchain": "On-chain",
-    "general.withdrawalReqeust": "Withdrawal request",
+    "general.withdrawalRequest": "Withdrawal request",
     "general.cashu": "Cashu",
     "general.activity": "Activity",
     "general.transaction": "Transaction",
