--- a/locales/en.json
+++ b/locales/en.json
@@ -1350,8 +1350,9 @@
     "views.Settings.Ecash.enableEcash.subtitle2": "You'll only want to store in Cashu what you can afford to lose, but it can make for a great solution for those who just want to test ZEUS for the first time or don't have enough bitcoin to open a Lightning channel yet.",
     "views.Settings.Ecash.enableEcash.subtitle3": "ZEUS will periodically prompt you to upgrade to self-custody, once you have enough bitcoin to purchase a Lightning channel.",
     "views.Settings.Ecash.enableEcash.learnMore": "Learn more about Cashu",
-    "views.Settings.Ecash.sweepThresholdTitle": "Mint sweep threshold",
-    "views.Settings.Ecash.sweepThresholdTitle.description": "Funds will be automatically swept to your self-custodial wallet if the balance you have with a mint exceeds this threshold. Set to 0 to disable",
+    "views.Settings.Ecash.automaticallySweep": "Automatically sweep ecash to self-custody",
+    "views.Settings.Ecash.sweepThresholdSatsTitle": "Mint sweep threshold",
+    "views.Settings.Ecash.sweepThresholdSatsTitle.description": "Funds will be automatically swept to your self-custodial wallet if the balance you have with a mint exceeds this threshold.",
     "views.LspExplanation.text1": "Zeus is a self-custodial lightning wallet. In order to send or receive a lightning payment, you must open a lightning payment channel, which has a setup fee.",
     "views.LspExplanation.text2": "Once the channel is set up, you'll only have to pay normal network fees until your channel exhausts its capacity.",
     "views.LspExplanation.buttonText": "Learn more about liquidity",
