feat: new Cashu seed format + BIP-39 export

--- a/locales/en.json
+++ b/locales/en.json
@@ -898,9 +898,12 @@
     "views.Settings.Seed.text3": "Beware of scams. Zeus support staff will never ask you for these words.",
     "views.Settings.Seed.text4": "On the following screen, tap each pane to reveal the seed word.",
     "views.Settings.Seed.backupComplete": "I've backed up my 24 words",
+    "views.Settings.Seed.backup12Complete": "I've backed up my 12 words",
     "views.Settings.Seed.dangerousText1": "Do you want to copy your 24 word seed to your clipboard?",
     "views.Settings.Seed.dangerousText2": "This is DANGEROUS. Your seed may be read by other applications that you open. Proceed with caution.",
     "views.Settings.Seed.dangerousButton": "Dangerously copy seed to clipboard",
+    "views.Cashu.CashuSeed.title": "Export Cashu wallet BIP-39 seed",
+    "views.Cashu.CashuSeed.text1": "The following 12 words are your Cashu wallet backup. You do not have to save these if you have your 24 word embedded LND wallet seed phrase backed up, but it is useful if you want to import funds into another Cashu wallet.",
     "views.Settings.SeedRecovery.title": "Wallet recovery",
     "views.Settings.SeedQRExport.title": "Export HD node root keys",
     "views.Settings.SeedQRExport.pleaseWait": "Generating yprv and zprv. This will take just a few moments.",
