locales: Service Provider

--- a/locales/en.json
+++ b/locales/en.json
@@ -76,6 +76,7 @@
     "general.network": "Network",
     "general.tapToLearnMore": "Tap to learn more.",
     "general.lsp": "Lightning Service Provider (LSP)",
+    "general.serviceProvider": "Service Provider",
     "general.success": "Success",
     "general.on": "On",
     "general.off": "Off",
