fix: SwapDetails display and locales

--- a/locales/en.json
+++ b/locales/en.json
@@ -1545,15 +1545,16 @@
     "views.Swaps.SwapsPane.failedToLoad": "Failed to load swaps",
     "views.Swaps.Settings.enablePro": "Enable Boltz Pro",
     "views.SwapDetails.title": "Swap Details",
-    "views.SwapDetails.acceptZerpConf": "Accept Zero Conf",
+    "views.SwapDetails.acceptZeroConf": "Accept Zero Conf",
     "views.SwapDetails.expectedAmount": "Expected amount",
     "views.SwapDetails.onchainAmount": "On-chain amount",
     "views.SwapDetails.swapId": "Swap ID",
     "views.SwapDetails.timeoutBlockHeight": "Timeout Block Height",
     "views.SwapDetails.claimPublicKey": "Claim Public Key",
     "views.SwapDetails.swapTree": "Swap Tree",
-    "views.SwapDetails.bip21": "BIP21",
     "views.SwapDetails.refund": "Refund",
+    "views.SwapDetails.refundPublicKey": "Refund Public Key",
+    "views.SwapDetails.lockupAddress": "Lockup address",
     "views.SwapSettings.customHost": "Enter a custom host",
     "views.SwapSettings.failureReason": "Failure reason",
     "androidNotification.lndRunningBackground": "LND is running in the background",
