--- a/locales/en.json
+++ b/locales/en.json
@@ -598,6 +598,8 @@
     "views.OpenChannel.numConf": "Number of Confirmations",
     "views.OpenChannel.satsPerVbyte": "Satoshis per vByte",
     "views.OpenChannel.private": "Private",
+    "views.OpenChannel.closeAddress": "Close address (Optional)",
+    "views.OpenChannel.closeAddressExplainer": "An optional address where funds will be sent during a cooperative close. Can only be set when opening the channel and only if the peer supports it. If set, the channel can only be closed to this address.",
     "views.Payment.title": "Payment",
     "views.Payment.inTransitPayment": "In Transit Payment",
     "views.Payment.failedPayment": "Failed Payment",
