--- a/locales/en.json
+++ b/locales/en.json
@@ -450,7 +450,7 @@
     "views.Channel.externalAddress.info": "If specified, your channel funds will be sent to this external address, instead of an address in the internal wallet.",
     "views.Channel.forceClose": "Force close",
     "views.Channel.forceClose.infoText1": "Force closes should only be done when the channel partner has been offline for an extended period of time. Typically, the party initiating the force close will have to wait to spend their bitcoin, while the other side can spend their funds immediately.",
-    "views.Channel.forceClose.infoText2": "The length of the waiting period is defined when the channel is opened. It can range from just a day to a few weeks. This time period may be listed on this page, labeled as 'CSV Delay'.", 
+    "views.Channel.forceClose.infoText2": "The length of the waiting period is defined when the channel is opened. It can range from just a day to a few weeks. This time period may be listed on this page, labeled as 'CSV Delay'.",
     "views.Channel.confirmClose": "Confirm Channel Close",
     "views.Channel.aliases": "Aliases",
     "views.Channel.aliasScid": "Alias SCID",
@@ -1529,9 +1529,8 @@
     "views.Swaps.create": "Create atomic swap",
     "views.Swaps.initiate": "Initiate swap",
     "views.Swaps.refundSwap": "Refund swap",
-    "views.Swaps.cooperative": "Cooperative refund",
-    "views.Swaps.infoText": "Use cooperative, only if the selected service is operating",
-    "views.Swaps.enterRefundAddress": "Enter the on-chain address to receive refund",
+    "views.Swaps.uncooperative": "Uncooperative refund",
+    "views.Swaps.infoText": "It is recommended you only attempt an uncooperative refund if the service provider is not operational.",
     "views.Swaps.initiateRefund": "Initiate Refund",
     "views.Swaps.networkFee": "Network fee",
     "views.Swaps.serviceFee": "Service fee",
