--- a/locales/en.json
+++ b/locales/en.json
@@ -1549,6 +1549,7 @@
     "views.SwapDetails.onchainAmount": "On-chain amount",
     "views.SwapDetails.swapId": "Swap ID",
     "views.SwapDetails.timeoutBlockHeight": "Timeout Block Height",
+    "views.SwapDetails.timeoutBlockHeight.explainer": "In the event that the service is down and you need to do an uncooperative refund, funds will not be available to you until this block.",
     "views.SwapDetails.claimPublicKey": "Claim Public Key",
     "views.SwapDetails.swapTree": "Swap Tree",
     "views.SwapDetails.refund": "Refund",
