enhancement: show updates with progress bar

--- a/locales/en.json
+++ b/locales/en.json
@@ -1556,6 +1556,9 @@
     "views.SwapDetails.refund": "Refund",
     "views.SwapDetails.refundPublicKey": "Refund Public Key",
     "views.SwapDetails.lockupAddress": "Lockup address",
+    "views.SwapDetails.waitingForOnchainTx": "Waiting for on-chain transaction...",
+    "views.SwapDetails.waitingForConf": "Transaction is in mempool, waiting for confirmation...",
+    "views.SwapDetails.waitingForInvoicePayment":  "Waiting for invoice to be paid...",
     "views.SwapSettings.customHost": "Enter a custom host",
     "views.SwapSettings.failureReason": "Failure reason",
     "androidNotification.lndRunningBackground": "LND is running in the background",
