--- a/locales/en.json
+++ b/locales/en.json
@@ -742,19 +742,19 @@
     "stores.CashuStore.dataDeletedMessage": "Your Cashu data has been deleted.",
     "views.Tools.developerTools.title": "Developer Tools",
     "views.Tools.developerTools.noItemsExist": "No items exist",
-    "views.Tools.nodeConfigExportImport.title": "Export/Import Node Configurations",
-    "views.Tools.nodeConfigExportImport.explainerAndroid": "Exported node configurations can be found in Files > Downloads.",
-    "views.Tools.nodeConfigExportImport.explaineriOS": "Exported node configurations can be found in the Files app under the ZEUS folder",
-    "views.Tools.nodeConfigExportImport.exportConfigs": "Export node configurations",
-    "views.Tools.nodeConfigExportImport.importConfigs": "Import node configurations",
-    "views.Tools.nodeConfigExportImport.selectAllConfigs": "Select all node configurations",
+    "views.Tools.nodeConfigExportImport.title": "Export/Import Wallet Configurations",
+    "views.Tools.nodeConfigExportImport.explainerAndroid": "Exported wallet configurations can be found in Files > Downloads.",
+    "views.Tools.nodeConfigExportImport.explaineriOS": "Exported wallet configurations can be found in the Files app under the ZEUS folder",
+    "views.Tools.nodeConfigExportImport.exportConfigs": "Export wallet configurations",
+    "views.Tools.nodeConfigExportImport.importConfigs": "Import wallet configurations",
+    "views.Tools.nodeConfigExportImport.selectAllConfigs": "Select all wallet configurations",
     "views.Tools.nodeConfigExportImport.notExportable": "Not exportable",
     "views.Tools.nodeConfigExportImport.password": "Enter a password",
     "views.Tools.nodeConfigExportImport.confirmPassword": "Confirm password",
     "views.Tools.nodeConfigExportImport.unencryptedWarning": "WARNING: You are exporting potentially sensitive data - encryption is strongly recommended!",
-    "views.Tools.nodeConfigExportImport.exportSuccess": "Export succesful",
+    "views.Tools.nodeConfigExportImport.exportSuccess": "Export successful",
     "views.Tools.nodeConfigExportImport.exportError": "Export failed",
-    "views.Tools.nodeConfigExportImport.importSuccess": "Import succesful",
+    "views.Tools.nodeConfigExportImport.importSuccess": "Import successful",
     "views.Tools.nodeConfigExportImport.importError": "Import failed",
     "views.Settings.title": "Settings",
     "views.Settings.enabled": "Enabled",
