fix: default to 'Connect Peer' tab on '+ ' click, improve modal contrast, show loading & error on disconnect

--- a/locales/en.json
+++ b/locales/en.json
@@ -352,10 +352,14 @@
     "views.OpenChannel.removeAdditionalChannel": "Remove additional channel",
     "views.OpenChannel.noPeers": "No peers found",
     "views.OpenChannel.satsRecv": "Sats received",
-    "views.OpenChannel.pingTime": "Ping Time",
+    "views.OpenChannel.pingTime": "Ping time",
     "views.OpenChannel.satsSent": "Sats sent",
     "views.OpenChannel.disconnectPeerModalTitle": "Disconnect peer",
     "views.OpenChannel.disconnectPeerModalText": "Are you sure you want to disconnect from this peer?",
+    "views.OpenChannel.peerNotConnected": "Peer not connected",
+    "views.OpenChannel.peerNotFound": "Peer not found",
+    "views.OpenChannel.peersFetchFailed": "Failed to fetch peers",
+    "views.OpenChannel.disconnectPeerFailed": "Failed to disconnect peer",
     "views.Wallet.BalancePane.sync.title": "Finishing sync",
     "views.Wallet.BalancePane.sync.text": "Hang on tight! You will be ready to use Zeus soon.",
     "views.Wallet.waitForSync": "Your node must be fully synced before you can send or receive payments. Please wait.",
