feat: add ability to lock a token to a pubkey + set duration

--- a/locales/en.json
+++ b/locales/en.json
@@ -739,6 +739,7 @@
     "views.Tools.cashu.deleteData.confirmTitle": "Are you sure you want to delete all your Cashu data?",
     "views.Tools.cashu.deleteData.confirmMessage": "Funds can still be restored by re-adding your mints, but transaction history will be lost.",
     "stores.CashuStore.dataDeletedMessage": "Your Cashu data has been deleted.",
+    "stores.CashuStore.claimError.lockedToWallet": "This token is locked to a different wallet, can not receive it",
     "views.Tools.developerTools.title": "Developer Tools",
     "views.Tools.developerTools.noItemsExist": "No items exist",
     "views.Settings.title": "Settings",
@@ -1000,6 +1001,7 @@
     "views.Settings.AddContact.lnAddress": "LN address",
     "views.Settings.AddContact.onchainAddress": "On-chain address",
     "views.Settings.AddContact.pubkey": "Public key",
+    "views.Settings.AddContact.cashuPubkey": "Cashu pubkey",
     "views.Settings.AddContact.nip05": "NIP-05",
     "views.Settings.AddContact.nostrNpub": "Nostr npub",
     "views.Settings.AddContact.saveContact": "Save Contact",
@@ -1460,7 +1462,33 @@
     "cashu.tapToConfigure.short": "Tap to configure",
     "cashu.mintToken": "Mint token",
     "cashu.mintEcashToken": "Mint ecash token",
+    "cashu.lockToPubkey": "Lock to Pubkey (optional)",
+    "cashu.lockEcash": "Lock ecash",
+    "cashu.lockEcashDescription": "Lock ecash token to a public key. Only the receiver will be able to unlock it.",
+    "cashu.lockFor": "Lock for",
+    "cashu.lock": "Lock",
+    "cashu.cancel": "Cancel",
+    "cashu.lockedToKey": "Locked to key",
+    "cashu.lockedForDuration": "Locked for duration",
+    "cashu.lockForeverWarning": "⚠️ This eCash will be locked forever. Make sure you trust the recipient.",
+    "cashu.noDuration": "no duration",
+    "cashu.timeUnit.hour": "hour",
+    "cashu.timeUnit.day": "day",
+    "cashu.timeUnit.week": "week",
+    "cashu.timeUnit.month": "month",
+    "cashu.timeUnit.year": "year",
+    "cashu.duration.1day": "1 day",
+    "cashu.duration.1week": "1 week",
+    "cashu.duration.forever": "Forever",
+    "cashu.duration.custom": "Custom",
+    "cashu.durationRequired": "Duration is required",
+    "cashu.invalidDurationNumber": "Invalid duration number",
+    "cashu.durationTooLong": "Duration is too long",
+    "cashu.selectDurationRequired": "Please select a duration",
     "cashu.errorAddingMint": "Error adding mint",
+    "cashu.pubkeyRequired": "Cashu pubkey is required",
+    "cashu.invalidCashuPubkey": "Invalid pubkey format",
+    "cashu.contactNoCashuPubkey": "Selected contact does not have a Cashu pubkey",
     "views.Cashu.AddMint.title": "Add mint",
     "views.Cashu.AddMint.discover": "Discover mints",
     "views.Cashu.AddMint.discover.explainer": "These mints were recommended by other Nostr users. Read reviews at bitcoinmints.com. Be careful and do your own research before using a mint.",
@@ -1495,6 +1523,7 @@
     "stores.CashuStore.alreadySpent": "Token has already been spent.",
     "stores.CashuStore.pending": "Payment is pending.",
     "stores.CashuStore.claimError": "Error claiming token",
+    "stores.CashuStore.claimError.keyMismatch": "Wallet key mismatch",
     "stores.CashuStore.errorMintingToken": "Error minting token",
     "stores.CashuStore.notEnoughFunds": "Not enough funds to cover payment",
     "stores.CashuStore.feeExceedsAmt": "Melt fees match or exceed token amount",
@@ -1558,7 +1587,7 @@
     "views.SwapDetails.lockupAddress": "Lockup address",
     "views.SwapDetails.waitingForOnchainTx": "Waiting for on-chain transaction...",
     "views.SwapDetails.waitingForConf": "Transaction is in mempool, waiting for confirmation...",
-    "views.SwapDetails.waitingForInvoicePayment":  "Waiting for invoice to be paid...",
+    "views.SwapDetails.waitingForInvoicePayment": "Waiting for invoice to be paid...",
     "views.SwapSettings.customHost": "Enter a custom host",
     "views.SwapSettings.failureReason": "Failure reason",
     "androidNotification.lndRunningBackground": "LND is running in the background",
