refactor: token claims method

--- a/locales/en.json
+++ b/locales/en.json
@@ -739,7 +739,6 @@
     "views.Tools.cashu.deleteData.confirmTitle": "Are you sure you want to delete all your Cashu data?",
     "views.Tools.cashu.deleteData.confirmMessage": "Funds can still be restored by re-adding your mints, but transaction history will be lost.",
     "stores.CashuStore.dataDeletedMessage": "Your Cashu data has been deleted.",
-    "stores.CashuStore.claimError.lockedToWallet": "This token is locked to a different wallet, can not receive it",
     "views.Tools.developerTools.title": "Developer Tools",
     "views.Tools.developerTools.noItemsExist": "No items exist",
     "views.Settings.title": "Settings",
@@ -1524,6 +1523,9 @@
     "stores.CashuStore.pending": "Payment is pending.",
     "stores.CashuStore.claimError": "Error claiming token",
     "stores.CashuStore.claimError.keyMismatch": "Wallet key mismatch",
+    "stores.CashuStore.claimError.lockedToWallet": "This token is locked to a different wallet, can not receive it",
+    "stores.CashuStore.claimError.lockTimeNotExpired": "Token is locked for a duration that has not expired",
+    "stores.CashuStore.claimError.inconsistentLocking": "Token is locked to multiple different wallets",
     "stores.CashuStore.errorMintingToken": "Error minting token",
     "stores.CashuStore.notEnoughFunds": "Not enough funds to cover payment",
     "stores.CashuStore.feeExceedsAmt": "Melt fees match or exceed token amount",
