refactor: cashu lock setting ui and fix navigation issues

--- a/locales/en.json
+++ b/locales/en.json
@@ -1407,10 +1407,15 @@
     "pos.customItem": "Custom item",
     "time.seconds": "Seconds",
     "time.minutes": "Minutes",
+    "time.minute": "Minute",
     "time.hours": "Hours",
-    "time.days": "Days",
+    "time.hour": "Hour",
     "time.day": "Day",
+    "time.days": "Days",
+    "time.week": "Week",
     "time.weeks": "Weeks",
+    "time.year": "Year",
+    "time.years": "Years",
     "time.months": "Months",
     "time.month": "Month",
     "time.10min": "10 min",
@@ -1469,17 +1474,11 @@
     "cashu.cancel": "Cancel",
     "cashu.lockedToKey": "Locked to key",
     "cashu.lockedForDuration": "Locked for duration",
-    "cashu.lockForeverWarning": "⚠️ This eCash will be locked forever. Make sure you trust the recipient.",
+    "cashu.noContactsWithCashuPubkey": "No contact with Cashu pubkey",
     "cashu.noDuration": "no duration",
-    "cashu.timeUnit.hour": "hour",
-    "cashu.timeUnit.day": "day",
-    "cashu.timeUnit.week": "week",
-    "cashu.timeUnit.month": "month",
-    "cashu.timeUnit.year": "year",
-    "cashu.duration.1day": "1 day",
-    "cashu.duration.1week": "1 week",
+    "cashu.duration.1Day": "1 Day",
+    "cashu.duration.1Week": "1 Week",
     "cashu.duration.forever": "Forever",
-    "cashu.duration.custom": "Custom",
     "cashu.durationRequired": "Duration is required",
     "cashu.invalidDurationNumber": "Invalid duration number",
     "cashu.durationTooLong": "Duration is too long",
