enhancement: Added lockpubkey and locktime display to CashuToken view

--- a/locales/en.json
+++ b/locales/en.json
@@ -1000,7 +1000,7 @@
     "views.Settings.AddContact.lnAddress": "LN address",
     "views.Settings.AddContact.onchainAddress": "On-chain address",
     "views.Settings.AddContact.pubkey": "Public key",
-    "views.Settings.AddContact.cashuPubkey": "Cashu pubkey",
+    "views.Settings.AddContact.cashuPubkey": "Cashu Pubkey",
     "views.Settings.AddContact.nip05": "NIP-05",
     "views.Settings.AddContact.nostrNpub": "Nostr npub",
     "views.Settings.AddContact.saveContact": "Save Contact",
@@ -1470,6 +1470,8 @@
     "cashu.lockEcash": "Lock ecash",
     "cashu.lockEcashDescription": "Lock ecash token to a public key. Only the receiver will be able to unlock it.",
     "cashu.lockFor": "Lock for",
+    "cashu.lockTo": "Locked to",
+    "cashu.locktime": "Locked until",
     "cashu.lock": "Lock",
     "cashu.noContactsWithCashuPubkey": "No contact with Cashu pubkey",
     "cashu.noDuration": "no duration",
