fix: handle fiat unit conversion in withdrawal request using getSatAmount

--- a/locales/en.json
+++ b/locales/en.json
@@ -789,8 +789,8 @@
     "views.Tools.withdrawal.createWithdrawalRequest": "Create withdrawal request",
     "views.WithdrawalRedemption.redeeming": "Redeeming withdrawal request",
     "views.WithdrawalRedemption.success": "Withdrawal request redemption successful",
-    "views.withdrawal.errorCreate": "Error creating withdrawal request",
-    "views.withdrawal.id": "Withdrawal request ID",
+    "views.Tools.ErrorCreateWithdrawalRequest": "Error creating withdrawal request",
+    "views.WithdrawalRequest.id": "Withdrawal request ID",
     "views.Settings.title": "Settings",
     "views.Settings.enabled": "Enabled",
     "views.Settings.disabled": "Disabled",
