--- a/locales/en.json
+++ b/locales/en.json
@@ -49,7 +49,6 @@
     "general.sats": "sats",
     "general.blocks": "blocks",
     "general.search": "Search",
-    "general.noSearchResults": "No search results found",
     "general.help": "Help",
     "general.about": "About",
     "general.unified": "Unified",
@@ -792,21 +791,18 @@
     "views.Settings.SignMessage.signatureToVerify": "Signature to verify",
     "views.Settings.SignMessage.generatedSignature": "Generated signature",
     "views.Settings.SignMessage.copyPubkey": "Copy pubkey",
-    "views.Settings.SignMessage.success": "Success! This is a valid signature for the inputted message. Pubkey:",
+    "views.Settings.SignMessage.success": "Success! This is a valid signature for the inputted message.",
     "views.Settings.SignMessage.error": "Verification failed. Please double check message and signature.",
     "views.Settings.SignMessage.signingMethod": "Signing Method",
     "views.Settings.SignMessage.selectAddressSigning": "Select Address for Signing",
-    "views.Settings.SignMessage.selectAddressVerification": "Select Address for Verification",
-    "views.Settings.SignMessage.loadingAddresses": "Loading addresses...",
+    "views.Settings.SignMessage.selectAddressVerification": "Enter Address for Verification",
     "views.Settings.SignMessage.fullAddress": "Full Address",
     "views.Settings.SignMessage.tapToSelectAddress": "Tap here to select an address",
-    "views.Settings.SignMessage.noAddressesAvailable": "No on-chain addresses available. Please ensure your node supports address management.",
     "views.Settings.SignMessage.signatureType": "Signature Type",
-    "views.Settings.SignMessage.addressRequired": "Address (required for on-chain verification)",
     "views.Settings.SignMessage.pleaseEnterMessage": "Please enter a message to sign",
     "views.Settings.SignMessage.pleaseEnterMessageVerify": "Please enter a message to verify",
     "views.Settings.SignMessage.pleaseEnterSignature": "Please enter a signature to verify",
-    "views.Settings.SignMessage.pleaseSelectAddress": "Please select a Bitcoin address for on-chain verification",
+    "views.Settings.SignMessage.pleaseSelectAddress": "Please enter a Bitcoin address for on-chain verification",
     "views.Settings.SignMessage.noAddressForVerification": "No address provided for on-chain verification",
     "views.Settings.SignMessage.noDataReceived": "No data received from sign operation",
     "views.Settings.SignMessage.signOperationFailed": "Sign operation not supported",
@@ -1606,9 +1602,5 @@
     "views.SwapSettings.customHost": "Enter a custom host",
     "views.SwapSettings.failureReason": "Failure reason",
     "androidNotification.lndRunningBackground": "LND is running in the background",
-    "androidNotification.shutdown": "Shutdown",
-    "views.AddressPicker.sortBy.alphabeticalAscending": "Address (A to Z)",
-    "views.AddressPicker.sortBy.alphabeticalDescending": "Address (Z to A)",
-    "views.AddressPicker.sortBy.balanceAscending": "Balance (Low to High)",
-    "views.AddressPicker.sortBy.balanceDescending": "Balance (High to Low)"
+    "androidNotification.shutdown": "Shutdown"
 }
