--- a/locales/en.json
+++ b/locales/en.json
@@ -450,7 +450,8 @@
     "views.Channel.close": "Close Channel",
     "views.Channel.closingRate": "(Optional) Sat per vbyte closing fee",
     "views.Channel.externalAddress": "(Optional) External address",
-    "views.Channel.externalAddress.info": "If specified, your channel funds will be sent to this external address, instead of an address in the internal wallet.",
+    "views.Channel.externalAddress.info1": "If specified, your channel funds will be sent to this external address, instead of an address in the internal wallet.",
+    "views.Channel.externalAddress.info2": "A close address was set when this channel was opened. Your funds will be sent to this address only, and it cannot be changed.",
     "views.Channel.forceClose": "Force close",
     "views.Channel.forceClose.infoText1": "Force closes should only be done when the channel partner has been offline for an extended period of time. Typically, the party initiating the force close will have to wait to spend their bitcoin, while the other side can spend their funds immediately.",
     "views.Channel.forceClose.infoText2": "The length of the waiting period is defined when the channel is opened. It can range from just a day to a few weeks. This time period may be listed on this page, labeled as 'CSV Delay'.",
