feat: QR: Share: add ability to select share QR or share text

--- a/locales/en.json
+++ b/locales/en.json
@@ -152,6 +152,8 @@
     "general.min": "Min",
     "general.max": "Max",
     "general.encrypt": "Encrypt",
+    "general.qr": "QR",
+    "general.text": "Text",
     "channel.status.good": "Good",
     "channel.status.stable": "Stable",
     "channel.status.unstable": "Unstable",
