fix: token claim issue and minor bugs; refactor contact model

--- a/locales/en.json
+++ b/locales/en.json
@@ -1486,6 +1486,7 @@
     "cashu.pubkeyRequired": "Cashu pubkey is required",
     "cashu.invalidCashuPubkey": "Invalid pubkey format",
     "cashu.contactNoCashuPubkey": "Selected contact does not have a Cashu pubkey",
+    "cashu.selectCashuPubkey": "Select Cashu pubkey",
     "views.Cashu.AddMint.title": "Add mint",
     "views.Cashu.AddMint.discover": "Discover mints",
     "views.Cashu.AddMint.discover.explainer": "These mints were recommended by other Nostr users. Read reviews at bitcoinmints.com. Be careful and do your own research before using a mint.",
@@ -1522,7 +1523,6 @@
     "stores.CashuStore.claimError": "Error claiming token",
     "stores.CashuStore.claimError.keyMismatch": "Wallet key mismatch",
     "stores.CashuStore.claimError.lockedToWallet": "This token is locked to a different wallet, can not receive it",
-    "stores.CashuStore.claimError.lockTimeNotExpired": "Token is locked for a duration that has not expired",
     "stores.CashuStore.claimError.inconsistentLocking": "Token is locked to multiple different wallets",
     "stores.CashuStore.errorMintingToken": "Error minting token",
     "stores.CashuStore.notEnoughFunds": "Not enough funds to cover payment",
