--- a/locales/en.json
+++ b/locales/en.json
@@ -1557,6 +1557,7 @@
     "views.Cashu.CashuToken.meltTokenSelfCustody": "Melt token to self-custody",
     "views.Cashu.CashuToken.tokenSweep": "Cashu token sweep",
     "views.Cashu.CashuToken.feeAdjusted": "Fee adjusted",
+    "views.Cashu.CashuToken.info": "Cashu Token Info",
     "views.Cashu.LightningAddressInfo.explainer1": "This is a custodial Lightning address tied to your Cashu wallet.",
     "views.Cashu.LightningAddressInfo.explainer2": "It leverages NUT-20 to lock all incoming payments to your Cashu wallet's pubkey. There is no time period in which you must redeem the funds; they are available for you to pull into your Cashu wallet indefinitely.",
     "views.Cashu.UnspentTokens.title": "Unspent tokens",
